--- a/paper/biPartiteWikipedia.tex
+++ b/paper/biPartiteWikipedia.tex
@@ -34,7 +34,7 @@
 
 \begin{document}
 
-\title{Bringing Order to Wikipedia\\ by Ranking Articles and Editors}
+\title{Characterizing Contribution Strategies and Quality \\ with Bi-Partite Networks in Wikipedia\\}
 %\subtitle{[Extended Abstract]
 %\titlenote{A full version of this paper is available as
 %\textit{Author's Guide to Preparing AC M SIG Proceedings Using
