--- a/paper/sections/abstract.tex
+++ b/paper/sections/abstract.tex
@@ -1,3 +1,4 @@
 \begin{abstract}
-We introduce and test an algorithm to rank editors and articles on Wikipedia according to their expertise and their quality respectively. The approach, called wikiRanks, is an extension of the pageRank algorithm to bi-partite networks of relations between two kinds of nodes (here, editors making changes to articles): the expertise of editors is assessed from the quantity and quality of articles they have edited. Conversely, the quality of an article depends on the number and the expertise of editors who have modified the article. And so on recursively. While wikiRanks incorporates only bi-partite links input information, we find high rank correlations ($\rho = 0.7\pm0.1$) with usual Wikipedia editors' expertise and articles' quality metrics. The wikiRanks algorithm also provides deep insights on the structure of online collaboration. We find that editors in some categories of Wikipedia articles achieve more quality with a large number of editors per article, while for other categories, quality is more achieved as a result of expertise of editors.
+In a world of collaboration, understanding how individuals achiev
+We introduce and test a recursive algorithm toalgorithm to bi-partite networks of relations between two kinds of nodes (here, editors making changes to articles): the expertise of editors is assessed from the quantity and quality of articles they have edited. Conversely, the quality of an article depends on the number and the expertise of editors who have modified the article. And so on recursively. While wikiRanks incorporates only bi-partite links input information, we find high rank correlations ($\rho = 0.7\pm0.1$) with usual Wikipedia editors' expertise and articles' quality metrics. The wikiRanks algorithm also provides deep insights on the structure of online collaboration. We find that editors in some categories of Wikipedia articles achieve more quality with a large number of editors per article, while for other categories, quality is more achieved as a result of expertise of editors.The algorithm we have developed to assess and understand individual contributions to Wikipedia, can be applied to any collaborative environment. 
 \end{abstract}
