--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -1,118 +1,64 @@
 \section{Results}
-For country-product bi-partite networks,  Caldarelli et al. \cite{caldarelli2012network} found that the ranking of countries correlates reasonably well with their ranking in terms of GDP, with Spearman correlation $\approx 0.4$ for calibration values $\alpha \approx 1.1$ and $\beta \approx 0.8$. Similarly, we studied the correlations of the article-editor ranking model with grand-truth exogenous values. We studied how these correlations evolve as more edits are contributed to a category of Wikipedia articles. Finally, we investigated the values of calibrated $\alpha$ and $\beta$ in the context of Wikipedia open collaboration.
-
-Figure \ref{fig:rhotime} shows the evolution of the maximum achievable rank correlation, Spearman $\rho$, between $\mathbf{w}^*_a$ versus $\mathbf{v}_a$ and $\mathbf{w}^*_e$ versus $\mathbf{v}_e$, respectively, as a function of time for each of the twelve categories.  The maximum rank correlation is obtained by a grid search. In our visualizations we draw a contour around the areas in the top 95\textsuperscript{th} percentile.
-The correlations are generally quite high ( $ 0.46 < \rho_e < 0.75$ with $\langle \rho_e\rangle = 0.64$ for editors and $0.57 < \rho_a < 0.91$ with $\langle \rho_a\rangle = 0.72$ ). Yet the rank correlations of editors remain overall smaller than rank correlations obtained for articles. This difference might be due to the roughness of the grand truth for editors $v_e$, expressed in labor-hours, compared to the quality of $v_a$, which is an aggregate measure of five precise quality metrics. Nevertheless, the correlation of editors' ranking with $v_e$ increases: $\rho_e$ exhibits a convex increase over time, suggesting that it takes time (i.e., lots of edits) to capture well the expertise of editors as well as for editors. 
-
+To understand how value of contributions {\it flows} from editors to articles, and from articles to editors, we have calibrated the control parameters $(\alpha^*,\beta^*)$ of the {\it bi-partite network random walker} on 12 Wikipedia categories (c.f. Table \ref{tab:statistics}) with 13 snapshots each (Figure \ref{fig:snapshots}). Figure \ref{fig:landscape} shows typical optimization landscapes, which maximize the rank correlation $\rho_e$ (resp. $\rho_e$) between editors expertise $w_{e}$ (resp. articles value) obtained from the model and expertise obtained from state-of-the-art measures $\bar{w}_e$ (resp. $\rho_a$). 
 
 \begin{figure}[!t]
 \centering
-\includegraphics[width=0.9\columnwidth]{Figures/rho_combined.png}.
-\caption{Evolution of Spearman $\rho$ rank correlations between the ranking obtained from the calibrated model and the grand-truth values for each category and for editors (upper panel)  and articles (lower panel). The correlations are generally quite high : $ 0.46 < \rho_e < 0.75$ with $\langle \rho_e\rangle = 0.64$ for editors and $0.57 < \rho_a < 0.91$ with $\langle \rho_a\rangle = 0.72$. $\rho_{a}$  is stable over time, which means that the quality of articles can be well captured early on by the model. However, $\rho_e$ exhibits a convex increase over time, suggesting that it takes time (i.e., lots of edits) to capture well the expertise of editors.}
-\label{fig:rhotime}
+\includegraphics[width=0.9\columnwidth]{../Figures/contour_fem_combined.png}.
+\caption{Typical landscape of maximum correlation as a function of $\alpha$ and $\beta$ for articles (upper panel) and editors (lower panel). The contour line shows the 95\textsuperscript{th} percentile of the rank correlation over the landscape. \textcolor{red}{\bf which category is represented here? Even though we don't see it here, there is a sharp transition at $\alpha = 0$ with high correlation for $\alpha < 0$ and low correlation for $\alpha > 0$. Whether $\alpha$ defined is unclear, but doubt it}}
+\label{fig:landscape}
 \end{figure}
 
+The maximum achievable rank-correlation with ground-truth expertise metrics for editors \cite{geiger2013} and quality for articles \cite{wang} shows that the bi-partite model of influence accounts particularly well for both quality of articles ($0.58 < \rho_a < 0.91$) and expertise of editors ($0.46 < \rho_e < 0.75 $) at the last snapshot. Actually, the {\it bi-partite network random walker} model reproduces very well early the ranking of editors and articles according to the ground-truth metrics (see Figure \ref{fig:rhotime}). In particular, articles quality is very well accounted for, while the level of correlation with the ground-truth of editors expertise exhibits a rather linear, or at least slightly concave increase.  
 
+%The question remains if the intersection of the solution spaces for $\rho_a$ and $\rho_e$ is nonempty. That is whether the we can find values of $\alpha$ and $\beta$ for which our editor ranking and article ranking are simultaneously optimized. We exploit two empirical facts from our data: the clear solution for article rankings that $alpha = 0$, and that for editor rankings the 95\textsuperscript{th} percentile maximizing boundary always includes values at $\alpha = 0$. Therefore, with $\alpha = 0$, we solve for $\beta$ in the editor ranking that maximizes $\rho_e$ - and thus $\rho_a$ simultaneously. 
 
-We now turn finding the values of $\alpha$ and $\beta$ for which best correlation is achieved.  
+For the latest snapshot (i.e., the state contributions in February 2014), we find that the best possible $\alpha^*$ is $0$ in all circumstances, and $\beta^*$ varies across categories. Table \ref{tab:maxbeta} shows the categories ordered by the optimal $\beta^*$ (and $\alpha^*=0$ for the sake of clarity), as well as the corresponding maximum rank correlations $\rho_e$ and $\rho_a$. Since there is no single optimal value for $(\alpha^*,\beta^*)$ , but rather a space of optimal values, we have searched for a value which maximizes both $\rho_e$ and $\rho_a$. $\alpha^* = 0$ means that editors expertise always benefits from contributions as a linear function of the number of articles edited (\textcolor{red}{and so on at higher orders}).  However, $\beta^*$ exhibits a continuum of values between $0$ ({\it Bicycle parts} and {\it US Military History}) and $1.52$ ({\it Sexual Acts"}). $\beta$ controls the influence of the number of editors on the quality of a given article (\textcolor{red}{and so on at higher orders}). When $\beta \approx 0$, the quality of articles is increased as a linear function of the number of editors who have modified them. For $\beta \gg 0$, the marginal gain of having more editors for a given article decreases. 
 
-With regards to \eqref{eqsim}, we can see the similarity of $w^*$ is related to the product of two expressions. Consider the limit as either $\alpha$ or $\beta$ approach $0$ independently., If one expression becomes unity, then the other expression dominates. In the article plot of Figure \ref{fig:landscape} our solution spaces moves linearly from $ \beta < 1 , \alpha \approx 0$ meaning that successful articles are largely uninfluenced by quality of the work its editors do elsewhere. This "spine" at $alpha = 0$ is a common feature in all our categories.
-For editors, on the other hand there are more complex solution spaces. In  \ref{fig:landscape}, we find a maximizing area roughly bounded $ -2  <\alpha < 1 , 0 < \beta > 2 $. This means that fit editors are characterized by a the spectrum defined by the extremes (i) minorly by the quality of the articles they've contributed to and partly by the size of their touched articles portfolio, or (ii) in the case that $\alpha < 0$ that contributed-to article quality is supremely important and that touching many articles is anti-important.
+$\beta$ is found generally stable over snapshots for categories, past the first 10\% of overall contributions. The stability of $(\alpha^*,\beta^*)$ confirm that the control parameters of the {\it bi-partite network random walker} describe a robust feature of the structure of value creation, at least in Wikipedia. This additional result is also a first step towards predictions of editors and articles, given the input made by editors.
 
-The question remains if the intersection of the solution spaces for $\rho_a$ and $\rho_e$ is nonempty. That is whether the we can find values of $\alpha$ and $\beta$ for which our editor ranking and article ranking are simultaneously optimized. We exploit two empirical facts from our data: the clear solution for article rankings that $alpha = 0$, and that for editor rankings the 95\textsuperscript{th} percentile maximizing boundary always includes values at $\alpha = 0$. Therefore, with $\alpha = 0$, we solve for $\beta$ in the editor ranking that maximizes $\rho_e$ - and thus $\rho_a$ simultaneously. 
-
-In \ref{landscape} the simultaneous maximizing solution exists at $\alpha = 0, \beta \approx 0.7$. This means that article ubiquity is more important than prolific editor output in ranking editors and articles.
-
-\ref{tab:maxbeta} lists each category by its maximizing $\beta$ value. Recall higher $\beta$ indicates more importance of article ubiquity. Noting that \eqref{eqsim} has a singularity at $\beta = 1$, we see that if $\beta > 1$ we actually enter into the symmetric reflection of the plot where the sign of our correlations is reverse. Since the magnitude of the anti-correlation is equal along the $\alpha = 0$ spine, this is not a problem as the predictive power remains just as high.
-We also find, as in the first two entries of \ref{tab:maxbeta}, that a maximizing $\beta$ may be $0$, in this case, the original \ref{HHalgo} algorithm would be just as predictive. 
 
 \begin{table}
 %\end{table}
-\begin{tabular}{lll}
-\toprule
-Category &  $\rho$ &  $\beta$ \\
-\midrule
-           Bicycle parts &  0.8953 &     0 \\
- Military history of the US &  0.5767 &     0 \\
-                  Computability theory &  0.7748 &  0.32 \\
-               American male novelists &  0.6729 &   0.4 \\
-                            2013 films &  0.7220 &  0.48 \\
-                     Economic theories &  0.7382 &  0.48 \\
-              American women novelists &  0.6304 &  0.64 \\
-                      Feminist writers &  0.7036 &  0.72 \\
-                                  Yoga &  0.6355 &  1.12 \\
-           Nobel Peace Prize laureates &  0.9096 &   1.2 \\
-              Counterculture festivals &  0.8031 &  1.36 \\
-                           Sexual acts &  0.6341 &  1.52 \\
-\bottomrule
+\begin{tabular}{|llcccc|}
+\hline
+         &                     Category & $\rho_a$ & $\rho_e$ & $\alpha$ & $\beta$ \\
+\hline
+ 1&                        Bicycle parts  &     0.90 &     0.46 &     0.00 &    0.00 \\
+ 2&Military history of the US  &     0.58 &     0.70 &     0.00 &    0.00 \\
+  3&                Computability theory &     0.77 &     0.56 &     0.00 &    0.32 \\
+   4&            American male novelists &     0.67 &     0.75 &     0.00 &    0.40 \\
+    5&                        2013 films  &     0.72 &     0.55 &     0.00 &    0.48 \\
+     6&                Economic theories  &     0.74 &     0.70 &     0.00 &    0.48 \\
+     7&         American women novelists  &     0.63 &     0.75 &     0.00 &    0.64 \\
+     8&                 Feminist writers  &     0.70 &     0.69 &     0.00 &    0.72 \\
+     9&                             Yoga  &     0.64 &     0.57 &     0.00 &    1.12 \\
+     10&      Nobel Peace Prize laureates  &     0.91 &     0.66 &     0.00 &    1.20 \\
+      11&        Counterculture festivals  &     0.80 &     0.61 &     0.00 &    1.36 \\
+        12&                   Sexual acts  &     0.63 &     0.66 &     0.00 &    1.52 \\
+\hline
 \end{tabular}
-\caption{Maximizing values of $\beta$ when $\alpha = 0$, sorted by $\beta$.}
+\caption{Categories ordered by increasing $\beta$ obtained from best rank-correlation $\rho_a$ and  $\rho_e$
+ of the {\it bi-partite network random walker} with the ground truth. As shown on the upper panel of Figure \ref{fig:landscape}, highest rank-correlation is always obtained for $\alpha = 0$ suggesting that articles get systematically enriched from more editors. Different values of $\beta$, however, show that some categories require more specialized authors ($\beta$ large), while others}
 \label{tab:maxbeta}
 \end{table}
 
 
+%However, for categories with $\beta >0$ the quality of an article is also negatively influenced by the portfolio size of its editors. In other words, when $\beta$ is large, the more articles an editor edits, the lower his or her contributed value to one single article. $\beta$ also characterizes each category and the way quality is achieved through the cumulative contribution of information. For $\beta$ small, all editors have a fairly equal chance to contribute positively to any article, while for $\beta$ large, an editor can only contribute positively to a subset of articles (the larger $\beta$ the smaller the set). Typically, it is unlikely for a single person to have visited all {\it counterculture festivals}, performed all {\it sexual acts} or {\it Yoga} practices, while it is easier for anyone to gather relevant information on {\it bicycle parts} or the {\it US military history}. 
+
+
+
+
+
+%\textcolor{red}{\bf Is there any reshuffling of ranking over time, or do they stay the same?}
+
+
+
 \begin{figure}[!t]
 \centering
-\includegraphics[width=0.9\columnwidth]{Figures/contour_fem_combined.png}.
-\caption{Typical landscape of maximum correlation as a function of $\alpha$ and $\beta$ for articles (upper panel) and editors (lower panel). The contour line shows the 95\textsuperscript{th} percentile of the rank correlation over the landscape.}
-\label{fig:landscape}
+\includegraphics[width=0.9\columnwidth]{../Figures/rho_combined.png}.
+\caption{Evolution of Spearman $\rho$ rank correlations between the ranking obtained from the calibrated model and the grand-truth values for each category and for editors (upper panel)  and articles (lower panel). The correlations are generally quite high : $ 0.46 < \rho_e < 0.75$ with $\langle \rho_e\rangle = 0.64$ for editors and $0.57 < \rho_a < 0.91$ with $\langle \rho_a\rangle = 0.72$. $\rho_{a}$  is stable over time, which means that the quality of articles can be well captured early on by the model. However, $\rho_e$ exhibits a convex increase over time, suggesting that it takes time (i.e., lots of edits) to capture well the expertise of editors. \textcolor{red}{\bf the panel is weirdly cut on the left. It would be great to see when is the first article (signaled e.g. by a star) and the first snapshot signal by a vertical cross ("+"). All snapshot points should be mentioned by a cross}}
+\label{fig:rhotime}
 \end{figure}
-
-%\clearpage
-
-
-%\subsection{Article-Editor Ranking Calibration}
-%
-%Having our endogenous and exogenous variables now, we perform tests to
-%$\underset{\alpha, \beta}{\operatorname{argmax}} \rho(\alpha, \beta)$, the pair that maximizes our spearman rank correlation between  $\mathbf{w^{*}_{e}}$ and $v_e$. We also do so for $\mathbf{w^{*}_{a}}$ and $v_a$.
-%
-%First we used a general purpose maximizing algorithm to find maximizing values. Secondly we performed a grid search with visual inspection. Overall we find smooth landscapes. The two methods verified each other's results. \ref{fig:contour_fem} shows the correlation landscape for Category:Feminist Writers calibrating both articles and editors.
-%
-%The results of calibrating our model are encouraging as we find high correlations between the results of our $w^*_e$ algorithm and our exogenous variables $v$. 
-%
-%We define $\rho$ at the maximum achievable spearman rank correlation between $w^*$ and $v$ for editors or articles, by category, and over time. The variation of $\rho$, by for editor for any category ranges from 0.75 to 0.46 with a mean 0.64.  That same statistic for articles is articles from 0.91 to 0.57 with a mean of 0.72, which is overall higher.
-%
-% 
-%From snapshotting we see view $\rho$ as  a function of time. In the case of editors we see increasing trends in all categories over time in an asymptotic way. This means that $w^*_e$ benefits from incorporating more contribution history. That is, as a category matures we can better predict successful editors from which articles they edit. As for being able to predict article quality, from the start of a category's history the correlations remain high and  stable. It is easier to predict an articles quality based on who has edited it.  \ref{fig:rhotime}
-%
-%\begin{figure}[!t]
-%\centering
-%\includegraphics[width=0.9\columnwidth]{Figures/rho_combined.png}.
-%\caption{$\rho$ over time, by category and type}
-%\label{fig:rhotime}
-%\end{figure}
-%
-%
-%\subsection{Negative values of $\alpha$ and $\beta$}
-%Another surprising result is that we find at times, negative values for $\alpha$ and $\beta$.
-%
-%To understand the results, we must have a firm grasp on what $\alpha$ and $\beta$ mean. They are more easily understood by roughly rewriting $\mathbf{w^*}$ as:
-%\begin{equation}
-%\begin{cases}
-%w^{*}_{e} \sim k^{1-\beta}_{e} \langle k_{a}^{-\alpha}\rangle_e \\
-%w^{*}_{a} \sim k^{1-\alpha}_{a} \langle k_{e}^{-\beta}\rangle_a
-%\end{cases} \label{eqsim}
-%\end{equation}
-%
-%Our solution spaces are not single point but a 2-dimensional area, similar to what found in \cite{caldarelli2012network}. A reason for this is the fact that we are using the spearman ranking correlation, once a ranking is achieved, $\alpha$ and $\beta$ can perturb without adjusting the ranking. 
-%
-%In these areas we see trends in there being important axes shown by the maximizing segments, which represent a several explanations for the article behaviour behaviour.
-%
-%With regards to \eqref{eqsim}, we can see the similarity of $w^*$ is related to the product of two expression. Values of $\alpha$ and $\beta$ can make the one of the product approach one or and so the other parameter may dominate. In the article plot of \ref{fig:contour_fem} our solution spaces moves linearly from $0 <\alpha <1 , \beta \approx 0$ meaning that successful editors are charcterized, by an equal balance of their edit count, and the average article quality of articles they've edited. At the other end $\alpha < - 1 , \beta > 1$ anti-importance of their how man articles they've edited, but high importance on the quality of edits.
-%
-%This seems quite natural to say, but $\alpha$ and $\beta$ need not vary together at all, and could be in different quadrants of the landscape each describing a different success strategy.
-%
-%\begin{figure}[!t]
-%\centering
-%\includegraphics[width=0.9\columnwidth]{Figures/contour_fem.png}.
-%\caption{Heatmaps of Spearman Rank Correlation between endogenous and exogenous ranks, 95$^{th}$ percentile  of correlations circled
-%Upper panel: articles - $w^*_a ~ v_a$
-%Lower panel editors - $w^*_e ~ v_e$
-%White indicates that correlation was not significant $p<0.05$ } 
-%\label{fig:contour_fem}
-%\end{figure}
-%
-%\subsection{$\rho$ increases over time.}
 
 	
 
